--- a/my-website/index.html
+++ b/my-website/index.html
@@ -154,15 +154,15 @@
 ">
   <div style="
     font-weight: bold;
-    font-size: 20px;
+    font-size: 22px;
     text-align: center;
     margin-bottom: 12px;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 8px;
+    gap: 6px;
   ">
-    <span style="color: white;">Chill</span><span style="color: #ffe600;">Flix</span>
+    <span style="color: #0055ff;">Chill</span><span style="color: #e60000;">Flix</span>
     <span style="font-size: 20px;">🔥</span>
   </div>
   <div style="font-size: 16px; margin-bottom: 6px;" id="userCount">Users Online: 0</div>
