--- a/my-website/index.html
+++ b/my-website/index.html
@@ -225,5 +225,12 @@
     setInterval(simulateStats, 5000);
   });
 </script>
+<div id="disclaimer" class="disclaimer-popup">
+  <div class="disclaimer-content">
+    <h2>Disclaimer</h2>
+    <p>This website does not host any videos on its own servers. All content is provided by non-affiliated third parties. ChillFlix is intended for informational and entertainment purposes only.</p>
+    <button onclick="dismissDisclaimer()">I Understand</button>
+  </div>
+</div>
 
 </body>
