--- a/my-website/index.html
+++ b/my-website/index.html
@@ -226,5 +226,35 @@
   });
 </script>
 
+<div id="disclaimer-box" style="
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background: #1a1a1a;
+  color: #fff;
+  padding: 14px 18px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  max-width: 300px;
+  font-size: 14px;
+  font-family: Arial, sans-serif;
+  z-index: 9999;
+">
+  <p>
+    📢 ChillFlix is a non-profit project. We do not host any content on our servers. All content is publicly sourced.
+  </p>
+  <button onclick="document.getElementById('disclaimer-box').style.display='none'" style="
+    margin-top: 10px;
+    background: #e50914;
+    border: none;
+    padding: 6px 12px;
+    color: white;
+    font-size: 13px;
+    border-radius: 4px;
+    cursor: pointer;
+  ">
+    I Understand
+  </button>
+</div>
 
 </body>
