--- a/my-website/index.html
+++ b/my-website/index.html
@@ -84,13 +84,18 @@
       </div>
 
       <div class="server-selector">
-        <label for="server">Change Server:</label>
-        <select id="server" onchange="changeServer()" aria-controls="modal-video">
-          <option value="vidsrc.cc">Vidsrc.cc</option>
-          <option value="vidsrc.me">Vidsrc.me</option>
-          <option value="player.videasy.net">Player.Videasy.net</option>
-        </select>
-      </div>
+  <label for="server">Change Server:</label>
+  <select id="server" onchange="changeServer()" aria-controls="modal-video">
+    <option value="vidsrc.cc">Vidsrc.cc</option>
+    <option value="vidsrc.me">Vidsrc.me</option>
+    <option value="player.videasy.net">Player.Videasy.net</option>
+    <option value="openload.co">Openload.co</option>
+    <option value="streamango.com">Streamango.com</option>
+    <option value="vidcloud.co">Vidcloud.co</option>
+    <option value="streamtape.com">Streamtape.com</option>
+    <option value="doodstream.com">Doodstream.com</option>
+  </select>
+</div>
 
       <iframe
         id="modal-video"
