--- a/my-website/index.html
+++ b/my-website/index.html
@@ -141,6 +141,16 @@
         <a href="#" class="footer-link">Contact Us</a>
       </nav>
     </div>
+<div class="disclaimer-section">
+  <p>
+    ChillFlix does not host or upload any videos. All content is provided by third-party services and is publicly available online.
+    If you have any legal issues, please contact the appropriate media file owners or host sites.
+  </p>
+  <div class="disclaimer-links">
+    <a href="/about.html">About Us</a>
+    <a href="/contact.html">Contact Us</a>
+  </div>
+</div>
   </footer>
 <!-- Reminder Message -->
 <div id="reminder-box" style="
