--- a/my-website/index.html
+++ b/my-website/index.html
@@ -133,15 +133,18 @@
 
   <!-- Footer -->
   <footer class="footer" role="contentinfo">
-<div class="disclaimer-section">
+<div class="disclaimer-section" style="color: white;"> 
   <p>
     ChillFlix does not host or upload any videos. All content is provided by third-party services and is publicly available online.
     If you have any legal issues, please contact the appropriate media file owners or host sites.
   </p>
-  <div class="disclaimer-links">
-    <a href="/about.html">About Us</a>
-    <a href="/contact.html">Contact Us</a>
+  <div class="disclaimer-links" style="margin-top: 10px;">
+    <a href="/about.html" style="color: white; text-decoration: underline;">About Us</a>
+    <a href="/contact.html" style="color: white; text-decoration: underline; margin-left: 15px;">Contact Us</a>
   </div>
+  <p style="margin-top: 15px; font-size: 14px; color: white;">
+    © 2025 ChillFlix. All rights reserved.
+  </p>
 </div>
   </footer>
 <!-- Reminder Message -->
