--- a/my-website/index.html
+++ b/my-website/index.html
@@ -146,6 +146,7 @@
     © 2025 ChillFlix. All rights reserved.
   </p>
 </div>
+<div class="about-us-section"> ... </div>
   </footer>
 <!-- Reminder Message -->
 <div id="reminder-box" style="
