--- a/my-website/index.html
+++ b/my-website/index.html
@@ -18,7 +18,18 @@
 <script async="async" data-cfasync="false" src="//pl26741459.profitableratecpm.com/1baf9dcb2f371ef2a2caaa97bf82e9bc/invoke.js"></script>
 <div id="container-1baf9dcb2f371ef2a2caaa97bf82e9bc"></div>
 </head>
-
+<div class="banner-slider" id="banner-slider">
+  <div class="banner-item active" style="background-image: url('movie1.jpg')">
+    <h1>Movie Title 1</h1>
+  </div>
+  <div class="banner-item" style="background-image: url('movie2.jpg')">
+    <h1>Movie Title 2</h1>
+  </div>
+  <div class="banner-item" style="background-image: url('movie3.jpg')">
+    <h1>Movie Title 3</h1>
+  </div>
+  <!-- Add more banner-item divs as needed -->
+</div>
 <body>
   <!-- Navbar -->
   <header class="navbar" role="banner">
